# terrarium_2015

./: .gitignore  LICENSE  README.md  nuttx_config.sh  nuttx_flash.sh  nuttx_init.sh  nuttx_tutorial.md
apps/: Kconfig  Makefile
apps/terrarium/: Kconfig  Make.defs  Makefile
apps/terrarium/Groupe_E/: Kconfig
apps/terrarium/Groupe_F/: Kconfig
apps/terrarium/Groupe_G/: Kconfig  Make.defs  Makefile  mock.c  pwmi2c_main.c  pwmi2c_main.h
apps/terrarium/Groupe_G/test/: CMakeLists.txt  RunAllTests.cpp  pwm_mock.c  pwm_mock.h  pwmi2c_main.c  pwmi2c_test.cpp
apps/terrarium/Groupe_H/: Make.defs
apps/terrarium/teacher/: Kconfig  Makefile  teacher_main.c
docs/: nuttx_tutorial.md
docs/Composants/Segmented_LCD_I2C/: Lcd03tech.htm
docs/Nuttx/: nuttx_tutorial.md
kconfig-nuttx/lib/: libkconfig-parser.la
myapp/: Kconfig  Makefile
myapp/Groupe_A/: Make.defs
myapp/Groupe_B/: Kconfig  Make.defs
myapp/Groupe_D/: Kconfig  Make.defs
myapp/Groupe_E/: Make.defs
myapp/Groupe_F/: Make.defs
myapp/Groupe_G/: Kconfig  Make.defs
myapp/Tibo/: Kconfig  Make.defs  Makefile  tibo_main.c
myapp/Tibo/tibo_test1/: Kconfig  Makefile  tibo_main.c
nuttx/: .config  .gitignore  System.map  config.linux  nuttx  setenv.sh
nuttx/configs/efm32gg-stk3700/src/: efm32_userleds.c
nuttx/configs/sam4s-xplained/: Kconfig  README.txt
nuttx/configs/sam4s-xplained/include/: board.h
nuttx/configs/sam4s-xplained/nsh/: defconfig
openocd/share/info/: openocd.info  openocd.info-1  openocd.info-2
resources/: config-sam4s-xpld
resources/openocd/: atmel_sam4s_xplained.cfg
(+22 files in other folders)
